--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <button class="change-bg" onclick="changeBackground()">切换背景</button>
     <button class="next-page" onclick="checkPassword()">进入下一页</button>
     <audio id="bg-music" autoplay loop>
-        <source src="background-music.mp3" type="audio/mpeg">
+        <source src="张悬-喜欢.flac" type="audio/mpeg">
         您的浏览器不支持音频播放。
     </audio>
 </body>
