--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             document.body.style.backgroundImage = `url(${backgrounds[currentIndex]})`;
         }
 
-        function checkPassword() {
-            const input = prompt("请输入密码进入下一页：");
-            if (input === "oureverlastingcode") {
+        function validatePassword() {
+            const password = prompt("请输入密码进入下一页：");
+            if (password === "oureverlastingcode") {
                 window.location.href = "nextpage.html";
             } else {
                 alert("密码错误，请重试！");
             }
         }
-
+<button onclick="validatePassword()">进入下一页</button>
         function createSnowflakes() {
             for (let i = 0; i < 100; i++) {
                 const snowflake = document.createElement('div');
@@ -133,7 +133,7 @@
     <button class="change-bg" onclick="changeBackground()">切换背景</button>
     <button class="next-page" onclick="checkPassword()">进入下一页</button>
     <audio id="bg-music" autoplay loop>
-        <source src="张悬-喜欢.flac" type="audio/mpeg">
+        <source src="张悬-喜欢.flac" type="audio">
         您的浏览器不支持音频播放。
     </audio>
 </body>
