--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>梦是榛果巧克力</title>
     <script>
         const backgrounds = ['background.1.jpg', 'background.2.jpg', 'background.3.jpg','background.4.jpg','background.5.jpg','background.6.jpg','background.7.jpg'];
-        let currentIndex = background.4.jpg;
+        let currentIndex = 0;
 
         function changeBackground() {
             currentIndex = (currentIndex + 1) % backgrounds.length;
@@ -32,7 +32,20 @@
                 document.body.appendChild(snowflake);
             }
         }
-        createSnowflakes();
+   const snowContainer = document.createElement("div");
+snowContainer.className = "snow-container";
+document.body.appendChild(snowContainer);
+
+setInterval(() => {
+    const snowflake = document.createElement("div");
+    snowflake.className = "snowflake";
+    snowflake.textContent = "❄️";
+    snowflake.style.left = Math.random() * window.innerWidth + "px";
+    snowContainer.appendChild(snowflake);
+
+    setTimeout(() => snowContainer.removeChild(snowflake), 5000);
+}, 300)；
+
     </script>
     <style>
         body {
@@ -93,19 +106,29 @@
             border-radius: 5px;
             cursor: pointer;
         }
-
-        .snowflake {
+        .snow-container {
             position: fixed;
-            top: -10px;
+            top: 0;
             left: 0;
-            width: 10px;
-            height: 10px;
-            background-color: white;
-            border-radius: 50%;
-            opacity: 0.8;
-            animation: fall 5s linear infinite, sway 3s ease-in-out infinite;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
         }
 
+         .snowflake {
+            position: absolute;
+            top: -50px;
+            font-size: 20px;
+            opacity: 0.7;
+            animation: fall 5s linear infinite;
+        }
+
+        @keyframes fall {
+            to {
+            transform: translateY(100vh);
+        }
+    } 
+  
         @keyframes fall {
             to {
                 transform: translateY(100vh);
