--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <button class="change-bg" onclick="changeBackground()">切换背景</button>
     <button class="next-page" onclick="checkPassword()">进入下一页</button>
     <audio id="bg-music" autoplay loop>
-        <source src="张悬-喜欢.flac" type="audio/flac">
+        <source src="zouyin_cn.mp3" type="audio/flac">
         您的浏览器不支持音频播放。
     </audio>
 </body>
