--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梦是榛果巧克力</title>
     <script>
-        const backgrounds = ['background.1.jpg', 'background.2.jpg', 'background.3.jpg', 'background.4.jpg', 'background.5.jpg', 'background.6.jpg', 'background.7.jpg'];
-        let currentIndex = 0;
+        const backgrounds = ['background.2.jpg', 'background.3.jpg', 'background.4.jpg', 'background.5.jpg', ];
+        let currentIndex = 2;
 
         function changeBackground() {
             currentIndex = (currentIndex + 1) % backgrounds.length;
