--- a/nextpage.html
+++ b/nextpage.html
@@ -1,24 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>下一页</title>
+    <title>欢迎页</title>
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #d9b1bd;
             font-family: Arial, sans-serif;
             color: white;
+            text-align: center;
+            background-image: url('background.3.jpg'); 
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #7b2a3f;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        button:hover {
+            background-color: #a03a53;
         }
     </style>
 </head>
 <body>
     <h1>欢迎来到我们的秘密小世界！</h1>
+    <button onclick="window.location.href='梦是榛果巧克力_第二页.html'">
+        进入我们的故事
+    </button>
 </body>
 </html>
