--- a/nextpage.html
+++ b/nextpage.html
@@ -21,13 +21,13 @@
             background-attachment: fixed;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 1.5em;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         button {
             padding: 10px 20px;
-            background-color: #7b2a3f;
+            background-color: #D9B1BD;
             color: white;
             border: none;
             border-radius: 5px;
