--- a/nextpage.html
+++ b/nextpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>欢迎页</title>
+    <title>梦是榛果巧克力</title>
     <style>
         body {
             display: flex;
@@ -19,6 +19,7 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            overflow: hidden; 
         }
         h1 {
             font-size: 1.5em;
@@ -38,6 +39,24 @@
         button:hover {
             background-color: #a03a53;
         }
+        .snowflake {
+            position: absolute;
+            top: -10px;
+            color: white;
+            font-size: 1em;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) rotate(360deg);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -45,5 +64,18 @@
     <button onclick="window.location.href='梦是榛果巧克力_第二页.html'">
         进入我们的故事
     </button>
+
+    <script>
+        const snowflakeCount = 50; 
+        for (let i = 0; i < snowflakeCount; i++) {
+            const snowflake = document.createElement("div");
+            snowflake.classList.add("snowflake");
+            snowflake.textContent = "❄️"; 
+            snowflake.style.left = Math.random() * 100 + "vw";
+            snowflake.style.animationDuration = Math.random() * 3 + 2 + "s"; 
+            snowflake.style.fontSize = Math.random() * 10 + 10 + "px"; 
+            document.body.appendChild(snowflake);
+        }
+    </script>
 </body>
-</html>
+</html
