--- a/梦是榛果巧克力_第二页.html
+++ b/梦是榛果巧克力_第二页.html
@@ -182,6 +182,15 @@
                 <label for="upload-阿湛头像">上传阿湛的头像：</label>
                 <input type="file" id="upload-阿湛头像" onchange="uploadAvatar('阿湛头像')">
             </div>
+            <!-- 泉泉的自我介绍 -->
+            <div class="泉泉-profile">
+                <img src="泉泉_default.jpg" alt="泉泉头像" id="泉泉头像">
+                <h2>泉泉's 自我介绍</h2>
+                <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好:爱好有关文艺的一切，也喜欢看各种血腥猎奇cult片，有时候也玩一点电吉他<br>对大家说:希望大家都幸福！！爱你萌（啾啾 </p>
+                <div class="upload-avatar">
+                    <label for="upload-泉泉头像">上传泉泉的头像：</label>
+                    <input type="file" id="upload-泉泉头像" onchange="uploadAvatar('泉泉头像')">
+             </div>
         </div>
         <!-- Message Board Section -->
         <div class="message-board">
