--- a/nextpage.html
+++ b/nextpage.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <h1>欢迎来到我们的秘密小世界！</h1>
-    <button onclick="window.location.href='梦是榛果巧克力_第二页.html'">
+    <button onclick="window.location.href='timeline.html'">
         进入我们的故事
     </button>
 
